// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler Reflection 1`] = `
Reflection {
  "members": [
    {
      "flags": 0,
      "kind": "number",
      "name": "id",
    },
    {
      "flags": 0,
      "kind": "string",
      "name": "name",
    },
  ],
  "name": "TUserSpec",
}
`;

exports[`Compiler Reflection 2`] = `
Reflection {
  "members": [
    {
      "flags": 0,
      "kind": "reference",
      "name": "id",
      "reference": "ID",
    },
    {
      "flags": 0,
      "kind": "string",
      "name": "description",
    },
    {
      "flags": 0,
      "kind": "boolean",
      "name": "done",
    },
  ],
  "name": "TCheckListSpec",
}
`;

exports[`Compiler Reflection 3`] = `
Reflection {
  "members": [
    {
      "flags": 1,
      "kind": "boolean",
      "name": "done",
    },
  ],
  "name": "TTodoSpecChecklistInput",
}
`;

exports[`Compiler Reflection 4`] = `
Reflection {
  "members": [
    {
      "flags": 0,
      "kind": "reference",
      "name": "id",
      "reference": "ID",
    },
    {
      "flags": 0,
      "kind": "string",
      "name": "title",
    },
    {
      "flags": 0,
      "kind": "reference",
      "name": "status",
      "reference": "TodoStatus",
    },
    {
      "flags": 0,
      "kind": "reference",
      "name": "user",
      "reference": "TUserSpec",
    },
    {
      "args": [
        {
          "flags": 0,
          "kind": "reference",
          "name": "<TInput>",
          "reference": "TTodoSpecChecklistInput",
        },
        {
          "args": [
            {
              "flags": 0,
              "kind": "reference",
              "name": "<T>",
              "reference": "TCheckListSpec",
            },
          ],
          "flags": 0,
          "kind": "Array<T>",
          "name": "TValue",
        },
      ],
      "flags": 0,
      "kind": "Input<TInput, TValue>",
      "name": "checklist",
    },
    {
      "args": [
        {
          "args": [
            {
              "flags": 0,
              "kind": "string",
              "name": "<T>",
            },
          ],
          "flags": 0,
          "kind": "Array<T>",
          "name": "<T>",
        },
      ],
      "flags": 0,
      "kind": "Mutator<T>",
      "name": "attachments",
    },
    {
      "flags": 0,
      "kind": "string",
      "name": "description",
    },
    {
      "args": [
        {
          "flags": 0,
          "kind": "number",
          "name": "<T>",
        },
      ],
      "flags": 0,
      "kind": "Mutator<T>",
      "name": "updatedAt",
    },
    {
      "flags": 0,
      "kind": "number",
      "name": "elapsedMs",
    },
  ],
  "name": "TTodoSpec",
}
`;
